{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 196,
  "lineage": "ad698fe6-a226-01eb-b015-131ba19845e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:627073650332:transit-gateway/tgw-0710fd5cac2371a92",
            "association_default_route_table_id": "tgw-rtb-04dbcc0750270a1f7",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway for Hybrid DNS Lab",
            "dns_support": "enable",
            "id": "tgw-0710fd5cac2371a92",
            "multicast_support": "disable",
            "owner_id": "627073650332",
            "propagation_default_route_table_id": "tgw-rtb-04dbcc0750270a1f7",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "hybrid-dns-lab-tgw",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-tgw",
              "Project": "hybrid-dns-lab"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:627073650332:transit-gateway-attachment/tgw-attach-005884625cf91344d",
            "dns_support": "enable",
            "id": "tgw-attach-005884625cf91344d",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-07840602c3fdc8eb1"
            ],
            "tags": {
              "Name": "hybrid-dns-lab-tgw-attachment-app-a",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-tgw-attachment-app-a",
              "Project": "hybrid-dns-lab"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0710fd5cac2371a92",
            "vpc_id": "vpc-006e731fb6415fa82",
            "vpc_owner_id": "627073650332"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_subnet.app_a_private",
            "aws_vpc.app_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "app_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:627073650332:transit-gateway-attachment/tgw-attach-0eda95a1039360c59",
            "dns_support": "enable",
            "id": "tgw-attach-0eda95a1039360c59",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0a3bc27e83d79182b"
            ],
            "tags": {
              "Name": "hybrid-dns-lab-tgw-attachment-app-b",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-tgw-attachment-app-b",
              "Project": "hybrid-dns-lab"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0710fd5cac2371a92",
            "vpc_id": "vpc-02696b2a6b0185000",
            "vpc_owner_id": "627073650332"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_subnet.app_b_private",
            "aws_vpc.app_b",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "shared_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:627073650332:transit-gateway-attachment/tgw-attach-0dff5464a9a85b9ab",
            "dns_support": "enable",
            "id": "tgw-attach-0dff5464a9a85b9ab",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0173cfd413ad6d5c0",
              "subnet-085d91b4a15d970c5"
            ],
            "tags": {
              "Name": "hybrid-dns-lab-tgw-attachment-shared",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-tgw-attachment-shared",
              "Project": "hybrid-dns-lab"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0710fd5cac2371a92",
            "vpc_id": "vpc-033cc54d97ba2b545",
            "vpc_owner_id": "627073650332"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_subnet.shared_private_1a",
            "aws_subnet.shared_private_1b",
            "aws_vpc.shared_services",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "onprem_simulator",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a19bcec6d2ec60fb",
            "arn": "arn:aws:ec2:us-east-1:627073650332:instance/i-01ba3387fa7644f9c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ba3387fa7644f9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "techcorp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0263d575f34aafb77",
            "private_dns": "ip-10-4-100-177.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.4.100.177",
            "public_dns": "ec2-18-209-65-197.compute-1.amazonaws.com",
            "public_ip": "18.209.65.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01963e193366894c2",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06cfd48d1a66808dc",
            "tags": {
              "Name": "hybrid-dns-lab-onprem-simulator",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-onprem-simulator",
              "Project": "hybrid-dns-lab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052d163cd3e2593ad"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route53_resolver_endpoint.inbound",
            "aws_security_group.instance_sg",
            "aws_security_group.resolver_sg",
            "aws_subnet.app_a_public",
            "aws_subnet.shared_private_1a",
            "aws_subnet.shared_private_1b",
            "aws_vpc.app_a",
            "aws_vpc.shared_services",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a19bcec6d2ec60fb",
            "arn": "arn:aws:ec2:us-east-1:627073650332:instance/i-039f396e1cb3f93bc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039f396e1cb3f93bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "techcorp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-055e8d50057a4f5e5",
            "private_dns": "ip-10-4-1-157.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.4.1.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e83b260e4015c263",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07840602c3fdc8eb1",
            "tags": {
              "Name": "hybrid-dns-lab-test-app-a",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-test-app-a",
              "Project": "hybrid-dns-lab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052d163cd3e2593ad"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.instance_sg",
            "aws_subnet.app_a_private",
            "aws_vpc.app_a",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_app_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a19bcec6d2ec60fb",
            "arn": "arn:aws:ec2:us-east-1:627073650332:instance/i-04b66f457767c59b0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b66f457767c59b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "techcorp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bd8829990989a33d",
            "private_dns": "ip-10-5-1-148.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.1.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0683ffdefb032275b",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3bc27e83d79182b",
            "tags": {
              "Name": "hybrid-dns-lab-test-app-b",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-test-app-b",
              "Project": "hybrid-dns-lab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-078210c47b99a4d54"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app_b_instance_sg",
            "aws_subnet.app_b_private",
            "aws_vpc.app_b",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_a_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:internet-gateway/igw-0fc05496d8d43e3e4",
            "id": "igw-0fc05496d8d43e3e4",
            "owner_id": "627073650332",
            "tags": {
              "Name": "hybrid-dns-lab-app-a-igw",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-app-a-igw",
              "Project": "hybrid-dns-lab"
            },
            "vpc_id": "vpc-006e731fb6415fa82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_a_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:route-table/rtb-09183439c4d93e4c6",
            "id": "rtb-09183439c4d93e4c6",
            "owner_id": "627073650332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.3.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0710fd5cac2371a92",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.5.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0710fd5cac2371a92",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hybrid-dns-lab-app-a-private-rt",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-app-a-private-rt",
              "Project": "hybrid-dns-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-006e731fb6415fa82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.app_a",
            "aws_subnet.app_a_private",
            "aws_vpc.app_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_a_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:route-table/rtb-00ed8013f1d7c99fd",
            "id": "rtb-00ed8013f1d7c99fd",
            "owner_id": "627073650332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc05496d8d43e3e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.3.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0710fd5cac2371a92",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.5.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0710fd5cac2371a92",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hybrid-dns-lab-app-a-public-rt",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-app-a-public-rt",
              "Project": "hybrid-dns-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-006e731fb6415fa82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.app_a",
            "aws_internet_gateway.app_a_igw",
            "aws_subnet.app_a_private",
            "aws_vpc.app_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_b_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:route-table/rtb-0b4a0eb93c804c96a",
            "id": "rtb-0b4a0eb93c804c96a",
            "owner_id": "627073650332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.3.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0710fd5cac2371a92",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.4.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0710fd5cac2371a92",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hybrid-dns-lab-app-b-private-rt",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-app-b-private-rt",
              "Project": "hybrid-dns-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-02696b2a6b0185000"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.app_b",
            "aws_subnet.app_b_private",
            "aws_vpc.app_b",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shared_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:route-table/rtb-09f378d694847d7c0",
            "id": "rtb-09f378d694847d7c0",
            "owner_id": "627073650332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.4.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0710fd5cac2371a92",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.5.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0710fd5cac2371a92",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hybrid-dns-lab-shared-private-rt",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-shared-private-rt",
              "Project": "hybrid-dns-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-033cc54d97ba2b545"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.shared_services",
            "aws_subnet.shared_private_1a",
            "aws_subnet.shared_private_1b",
            "aws_vpc.shared_services",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_a_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d8845759fffc90d",
            "route_table_id": "rtb-09183439c4d93e4c6",
            "subnet_id": "subnet-07840602c3fdc8eb1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.app_a",
            "aws_route_table.app_a_private_rt",
            "aws_subnet.app_a_private",
            "aws_vpc.app_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046bd419d71d797a6",
            "route_table_id": "rtb-00ed8013f1d7c99fd",
            "subnet_id": "subnet-06cfd48d1a66808dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.app_a",
            "aws_internet_gateway.app_a_igw",
            "aws_route_table.app_a_public_rt",
            "aws_subnet.app_a_private",
            "aws_subnet.app_a_public",
            "aws_vpc.app_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073e326a78ef69827",
            "route_table_id": "rtb-0b4a0eb93c804c96a",
            "subnet_id": "subnet-0a3bc27e83d79182b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.app_b",
            "aws_route_table.app_b_private_rt",
            "aws_subnet.app_b_private",
            "aws_vpc.app_b",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shared_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068ada28c47553a26",
            "route_table_id": "rtb-09f378d694847d7c0",
            "subnet_id": "subnet-0173cfd413ad6d5c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.shared_services",
            "aws_route_table.shared_private_rt",
            "aws_subnet.shared_private_1a",
            "aws_subnet.shared_private_1b",
            "aws_vpc.shared_services",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shared_private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2c82761add40a13",
            "route_table_id": "rtb-09f378d694847d7c0",
            "subnet_id": "subnet-085d91b4a15d970c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_vpc_attachment.shared_services",
            "aws_route_table.shared_private_rt",
            "aws_subnet.shared_private_1a",
            "aws_subnet.shared_private_1b",
            "aws_vpc.shared_services",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_b_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:security-group/sg-078210c47b99a4d54",
            "description": "Security group for App B instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078210c47b99a4d54",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "All traffic from VPCs",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "hybrid-dns-lab-app-b-instance-sg20250822055953958600000003",
            "name_prefix": "hybrid-dns-lab-app-b-instance-sg",
            "owner_id": "627073650332",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hybrid-dns-lab-app-b-instance-sg",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-app-b-instance-sg",
              "Project": "hybrid-dns-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-02696b2a6b0185000"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:security-group/sg-052d163cd3e2593ad",
            "description": "Security group for test instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052d163cd3e2593ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "All traffic from VPCs",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "hybrid-dns-lab-instance-sg20250822055956103000000005",
            "name_prefix": "hybrid-dns-lab-instance-sg",
            "owner_id": "627073650332",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hybrid-dns-lab-instance-sg",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-instance-sg",
              "Project": "hybrid-dns-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-006e731fb6415fa82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "resolver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:security-group/sg-06721d49cf44b3544",
            "description": "Security group for Route 53 Resolver endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06721d49cf44b3544",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "DNS TCP from VPCs",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "DNS UDP from VPCs",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "hybrid-dns-lab-resolver-sg20250822055954116300000004",
            "name_prefix": "hybrid-dns-lab-resolver-sg",
            "owner_id": "627073650332",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hybrid-dns-lab-resolver-sg",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-resolver-sg",
              "Project": "hybrid-dns-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-033cc54d97ba2b545"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.shared_services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shared_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:security-group/sg-02456ff14d32f5367",
            "description": "Security group for shared services instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02456ff14d32f5367",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "All traffic from VPCs",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "hybrid-dns-lab-shared-instance-sg20250822055953832300000002",
            "name_prefix": "hybrid-dns-lab-shared-instance-sg",
            "owner_id": "627073650332",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hybrid-dns-lab-shared-instance-sg",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-shared-instance-sg",
              "Project": "hybrid-dns-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-033cc54d97ba2b545"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.shared_services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_a_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:subnet/subnet-07840602c3fdc8eb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.4.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07840602c3fdc8eb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627073650332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hybrid-dns-lab-app-a-private",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-app-a-private",
              "Project": "hybrid-dns-lab"
            },
            "vpc_id": "vpc-006e731fb6415fa82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:subnet/subnet-06cfd48d1a66808dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.4.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cfd48d1a66808dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "627073650332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hybrid-dns-lab-app-a-public",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-app-a-public",
              "Project": "hybrid-dns-lab"
            },
            "vpc_id": "vpc-006e731fb6415fa82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app_a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:subnet/subnet-0a3bc27e83d79182b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3bc27e83d79182b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627073650332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hybrid-dns-lab-app-b-private",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-app-b-private",
              "Project": "hybrid-dns-lab"
            },
            "vpc_id": "vpc-02696b2a6b0185000"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app_b",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shared_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:subnet/subnet-0173cfd413ad6d5c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.3.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0173cfd413ad6d5c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627073650332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hybrid-dns-lab-shared-private-1a",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-shared-private-1a",
              "Project": "hybrid-dns-lab"
            },
            "vpc_id": "vpc-033cc54d97ba2b545"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.shared_services",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shared_private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:subnet/subnet-085d91b4a15d970c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.3.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085d91b4a15d970c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627073650332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hybrid-dns-lab-shared-private-1b",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-shared-private-1b",
              "Project": "hybrid-dns-lab"
            },
            "vpc_id": "vpc-033cc54d97ba2b545"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.shared_services",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:vpc/vpc-006e731fb6415fa82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-01545d403c4099406",
            "default_route_table_id": "rtb-0468804d76bad9c32",
            "default_security_group_id": "sg-0680c32598631fea8",
            "dhcp_options_id": "dopt-001420789ad527247",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006e731fb6415fa82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0468804d76bad9c32",
            "owner_id": "627073650332",
            "tags": {
              "Name": "hybrid-dns-lab-app-a-vpc",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-app-a-vpc",
              "Project": "hybrid-dns-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:vpc/vpc-02696b2a6b0185000",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-07fbb4b0a6b58ac95",
            "default_route_table_id": "rtb-0030c6d17bdd3b138",
            "default_security_group_id": "sg-0e1fd8d0159ba1b1e",
            "dhcp_options_id": "dopt-001420789ad527247",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02696b2a6b0185000",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0030c6d17bdd3b138",
            "owner_id": "627073650332",
            "tags": {
              "Name": "hybrid-dns-lab-app-b-vpc",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-app-b-vpc",
              "Project": "hybrid-dns-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shared_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627073650332:vpc/vpc-033cc54d97ba2b545",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0035940b36f29ad7b",
            "default_route_table_id": "rtb-08bb6ef58a05ddedb",
            "default_security_group_id": "sg-01905d75af496f74f",
            "dhcp_options_id": "dopt-001420789ad527247",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-033cc54d97ba2b545",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08bb6ef58a05ddedb",
            "owner_id": "627073650332",
            "tags": {
              "Name": "hybrid-dns-lab-shared-services-vpc",
              "Project": "hybrid-dns-lab"
            },
            "tags_all": {
              "Name": "hybrid-dns-lab-shared-services-vpc",
              "Project": "hybrid-dns-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}